--- a/package.json
+++ b/package.json
@@ -125,87 +125,86 @@
     "instrument": false
   },
   "devDependencies": {
-    "assets-webpack-plugin": "^3.5.0",
-    "autoprefixer": "^6.6.1",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
+    "assets-webpack-plugin": "^3.5.1",
+    "autoprefixer": "^6.7.3",
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
     "babel-plugin-istanbul": "^4.0.0",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-module-resolver": "^2.5.0",
     "babel-plugin-system-import-transformer": "^2.4.0",
-    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.20.2",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-boldr": "^0.7.2",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-boldr": "^0.7.6",
     "babel-preset-env": "^1.1.8",
-    "babel-preset-latest": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-2": "^6.18.0",
-    "babel-register": "^6.18.0",
+    "babel-preset-latest": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.23.0",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
-    "coveralls": "^2.11.15",
+    "coveralls": "^2.11.16",
     "css-loader": "^0.26.1",
-    "enzyme": "^2.7.0",
-    "eslint": "^3.13.1",
+    "enzyme": "^2.7.1",
+    "eslint": "^3.15.0",
     "eslint-config-boldr": "^1.1.1",
     "eslint-loader": "^1.6.1",
-    "eslint-plugin-babel": "^4.0.0",
+    "eslint-plugin-babel": "^4.0.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-react": "^6.10.0",
     "extract-text-webpack-plugin": "2.0.0-rc.3",
     "file-loader": "^0.10.0",
     "happypack": "^3.0.2",
     "ignore-styles": "^5.0.1",
-    "jsdom": "^9.9.1",
+    "jsdom": "^9.11.0",
     "lodash-webpack-plugin": "^0.11.0",
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.2.0",
     "node-noop": "^1.0.0",
-    "node-sass": "^4.3.0",
+    "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
-    "nyc": "^10.0.0",
+    "nyc": "^10.1.2",
     "postcss-cssnext": "^2.9.0",
-    "postcss-loader": "^1.2.2",
+    "postcss-loader": "^1.3.0",
     "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "3.0.0-beta.3",
     "rimraf": "^2.5.4",
-    "sass-loader": "^6.0.0",
+    "sass-loader": "^6.0.1",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "2.2.1",
-    "webpack-dev-middleware": "^1.9.0",
-    "webpack-hot-middleware": "^2.15.0",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-hot-middleware": "^2.17.0",
     "webpack-node-externals": "^1.5.4"
   },
   "dependencies": {
     "better-npm-run": "0.0.14",
     "classnames": "^2.2.5",
     "compression": "^1.6.2",
-    "debug": "^2.6.0",
+    "debug": "^2.6.1",
     "dotenv": "^4.0.0",
     "es6-promise": "^4.0.5",
-    "express": "^4.14.0",
+    "express": "^4.14.1",
     "lodash": "^4.17.4",
-    "npm-run-all": "^4.0.0",
+    "npm-run-all": "^4.0.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-helmet": "^4.0.0",
     "react-redux": "^5.0.2",
-    "react-router": "^3.0.1",
-    "react-router-redux": "^4.0.7",
-    "redial": "^0.5.0",
+    "react-router-dom": "4.0.0-beta.6",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
+    "redux-thunk": "^2.2.0",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.2",
-    "source-map-support": "^0.4.8",
-    "superagent": "^3.3.2",
+    "source-map-support": "^0.4.11",
+    "superagent": "^3.4.4",
     "webfontloader": "^1.6.27",
     "webpack-isomorphic-tools": "^2.6.6"
   }
